--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,31 +1,35 @@
 ext {
 
-  springVersion = '4.1.2.RELEASE'
-  springSecurityVersion = '3.2.3.RELEASE'
+  springVersion = '4.1.5.RELEASE'
+  springSecurityVersion = '3.2.6.RELEASE'
   spockVersion = '0.7-groovy-2.0'
   gebSpockVersion = '0.9.2'
-  groovyVersion = '2.2.1'
+  groovyVersion = '2.4.2'
   log4jVersion = "1.2.17"
-  jacksonVersion = "2.1.5"
+  jacksonVersion = "2.5.1"
   slf4jVersion = '1.7.5'
   logbackVersion = '1.1.2'
   tomcatVersion = '7.0.53'
-  swaggerSpringMvcVersion = System.getenv('LATEST_SSMVC_VERSION') ?:'1.0.2-SNAPSHOT'
-  swaggerUiVersion = '2.0.17'
+  springfoxVersion = System.getenv('LATEST_SSMVC_VERSION') ?:'2.0.0-SNAPSHOT'
+  swaggerUiVersion = '2.1.8-M1'
   seleniumVersion = '2.41.0'
   chromeDriverVersion = '2.41.0'
   firefoxDriverVersion = '2.41.0'
   swaggerUiDist = "build/libs/swagger-ui-dist.zip"
   swaggerUiExplodedDir = "swagger-ui-${swaggerUiVersion}/dist/"
-  bootVersion = '1.1.3.RELEASE'
+  bootVersion = '1.1.9.RELEASE'
 }
 
-logger.quiet("--------- Building with swaggerSpringMvcVersion ${swaggerSpringMvcVersion}")
+logger.quiet("--------- Building with springfoxVersion ${springfoxVersion}")
 
 ext.libs = [
 
         swagger       : [
-                "com.mangofactory:swagger-springmvc:$swaggerSpringMvcVersion"
+                "io.springfox:springfox-core:$springfoxVersion",
+                "io.springfox:springfox-spi:$springfoxVersion",
+                "io.springfox:springfox-schema:$springfoxVersion",
+                "io.springfox:springfox-spring-web:$springfoxVersion",
+                "io.springfox:springfox-swagger2:$springfoxVersion"
         ],
 
         swaggerSpringMvcUi: [
@@ -38,7 +42,7 @@ ext.libs = [
                   "org.springframework:spring-webmvc:$version",
                   "org.springframework:spring-context-support:$version",
                   "org.springframework:spring-test:$version",
-                  "org.springframework.hateoas:spring-hateoas:0.12.0.RELEASE",
+                  "org.springframework.hateoas:spring-hateoas:0.17.0.RELEASE",
                   "org.springframework.security:spring-security-web:${springSecurityVersion}",
                   "org.springframework.security:spring-security-config:${springSecurityVersion}",
                   "javax.servlet:jstl:1.2"
