Improve GRADLE build Performance

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
 org.gradle.jvmargs=-XX:MaxPermSize=512m -Xmx1024m -Dfile.encoding=utf-8
+org.gradle.caching = true
+org.gradle.daemon = true
+org.gradle.parallel = true
+org.gradle.configureondemand = true
